<resources>
    <string name="app_name">LocalTraveler</string>
    <string name="google_map_key">AIzaSyBLjNIhahKCs4jdlW6iNm5v9Jy0GpXexZs</string>
    <string name="register">Register</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="local_traveler">Local Traveler</string>
    <string name="welcome">Welcome</string>
    <string name="select_your_city">Select Your City</string>
    <string name="city_name">City Name</string>
    <string name="select_end_date">Select End Date</string>
    <string name="view_saved_n_itinerary">View Saved \n Itinerary</string>
    <string name="create_nitinerary">Create \nItinerary</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="plan_your_road_trip_ltinerary_in_seconds">Plan Your Road Trip ltinerary in Seconds</string>
    <string name="email">Email</string>
    <string name="number_of_restaurants">Number of Restaurants</string>
    <string name="total_day_s">Total Day(s)</string>
    <string name="itinerary_summary">Itinerary Summary</string>
    <string name="number_of_venue">Number of Venue</string>
    <string name="show_on_map">Show on Map</string>
    <string name="track_itinerary">Track Itinerary</string>
    <string name="regina">Regina</string>
    <string name="restaurants">Restaurants</string>
    <string name="venues">Venues</string>
    <string name="generate_again">Generate Again</string>
    <string name="next">Next</string>
    <string name="select_start_date">Select Start Date</string>
    <string name="details">Details</string>
    <string name="rating">Rating:</string>
    <string name="price_level">Price Level:</string>
    <string name="website">Website:</string>
    <string name="opening_hours">Opening Hours:</string>
    <string name="maps_amp_reviews"><![CDATA[Maps & Reviews]]></string>
    <string name="trip_duration_days">Trip Duration (Days) :</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="itinerary_saved_nsuccessfully">Itinerary Saved \nSuccessfully!</string>
    <string name="view_saved_itinerary">View Saved Itinerary</string>
    <string name="create_new_one">Create New One</string>
    <string name="you_have_no_saved_itinerary">You have no Saved Itinerary</string>
    <string name="my_saved_itinerary">My Saved Itinerary</string>
    <string name="username">UserName</string>
    <string name="itinerary_generation_list">Itinerary Generation List</string>
</resources>