<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_map"
    android:orientation="vertical"
    tools:context=".activities.AddCityActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="15dp"

        android:layout_centerHorizontal="true"
        android:src="@drawable/iv_back" />
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tvTraveller"
        android:layout_below="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/local_traveler"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvUser"
        android:layout_below="@+id/tvTraveller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/welcome"
        android:textColor="@color/colorSecondary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llCity"
        android:layout_below="@+id/tvUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_your_city"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/btnSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_text"
            android:drawableEnd="@drawable/vector_15"
            android:drawableTint="@color/colorPrimary"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/city_name"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llStartDate"
        android:layout_below="@+id/llCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_start_date"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_text"
            android:drawableRight="@drawable/baseline_calendar_month_24"
            android:drawableTint="@color/colorPrimary"
            android:padding="10dp"
            android:text="15/07/2024"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llEndDate"
        android:layout_below="@+id/llStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_end_date"
            android:textColor="@color/colorSecondary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvEnd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="5dp"
            android:background="@drawable/bg_text"
            android:drawableEnd="@drawable/baseline_calendar_month_24"
            android:drawableTint="@color/colorPrimary"
            android:padding="10dp"
            android:text="15/07/2024"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:layout_below="@+id/llEndDate"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src="@drawable/plan_bg"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnSaved"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:layout_marginBottom="20dp"
            android:minLines="2"
            android:text="@string/view_saved_n_itinerary" />

        <Button
            android:id="@+id/btnCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:minLines="2"
            android:text="@string/create_nitinerary" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>